<resources>
    <string name="app_name">用车管理</string>
    <string name="spiderwebchart">SpiderWebChart</string>
    <string name="spiderwebchart_title1">title1</string>
    <string name="spiderwebchart_title2">title2</string>
    <string name="spiderwebchart_title3">title3</string>
    <string name="spiderwebchart_title4">title4</string>
    <string name="spiderwebchart_title5">title5</string>
    <string name="app_name1">安全学习</string>
    <string name="home">首页</string>
    <string name="study">学习</string>
    <string name="my">我的</string>
    <string name="inputshenfen">请输入密码</string>
    <string name="inputPhone">请输入登录账号</string>
    <string name="queding">登录</string>
    <string name="forgetpass">忘记密码</string>
    <string name="picture">拍照</string>
    <string name="need_permissions">该App需要打开摄像头拍照，并保存到设备上</string>
    <string name="sorry">很抱歉，由于未被赋予相应权限，“Picture”停止运行</string>
    <string name="failed">配置失败</string>
    <string name="save_failed">保存失败</string>
    <string name="list_listfooterview_normal">查看更多</string>
    <string name="list_listfooterview_ready">松开载入更多</string>
    <string name="list_listfooterview_is_all">已显示全部</string>
    <string name="list_loading">加载中...</string>
    <string name="no_data">暂时没有查询结果</string>
    <string name="know">知道了</string>
    <string name="tip">提示</string>
    <string name="wait_dialog_title">正在请求，请稍后…</string>
    <string name="wel_hint_1">欢迎页就是这么丑</string>
    <string name="wel_hint_3">反正你也不能来打我</string>
    <string name="nohttp">NoHttp</string>
    <string name="nohttp_slogan">让你的网络请求更简单</string>
    <string name="title_original_activity">NoHttp原始用法</string>
    <string name="title_method_activity">各种请求协议演示</string>
    <string name="title_image_activity">NoHttp请求图片</string>
    <string name="title_post_body_activity">POST一段JSON、自定包体</string>
    <string name="title_define_request_activity">自定义Request</string>
    <string name="title_json_activity">JsonObject、JsonArray演示</string>
    <string name="title_cache_activity">五种缓存策略</string>
    <string name="title_cache_http_activity">Http标准协议的缓存</string>
    <string name="title_cache_request_failed_read_cache_activity">请求网络失败返回缓存</string>
    <string name="title_cache_none_request_network_activity">没有缓存才去请求网络</string>
    <string name="title_cache_only_read_cache">仅仅读取缓存</string>
    <string name="title_cache_only_request_network">仅仅请求网络</string>
    <string name="title_redirect_activity">响应码300…重定向</string>
    <string name="title_upload_activity">文件上传</string>
    <string name="title_upload_single_activity">单个文件上传</string>
    <string name="title_upload_multi_activity">多个文件上传</string>
    <string name="title_upload_file_list_activity">文件List上传</string>
    <string name="title_upload_album">选择相册图片上传</string>
    <string name="title_download_activity">文件下载</string>
    <string name="title_download_single_activity">单个文件下载</string>
    <string name="title_download_list_activity">多个文件下载</string>
    <string name="title_cancel_activity">如何取消请求</string>
    <string name="title_cancel_linkage_activity">和Activity/Fragment声明周期联动</string>
    <string name="title_cancel_sign_activity">取消指定的某几个请求</string>
    <string name="title_cancel_all_activity">取消队列中所有请求</string>
    <string name="title_sync_activity">同步请求</string>
    <string name="title_proxy_activity">通过代理请求服务器</string>
    <string name="title_https_activity">Https请求演示</string>
    <string name="request_start">发起请求</string>
    <string name="request_original_result">响应码：%1$d\n花费时间：%2$d毫秒。</string>
    <string name="method_request_failed">有的方法为什么请求失败？</string>
    <string name="method_request_failed_reason">在RFC2616中规定了Http1.1支持的请求方法，有些服务器、客户端(Android系统)不支持某些请求方法，所以请求失败是正常的，但是我们还是要遵守协议，推荐服务器和客户端都支持，这是非常好的设计和体验。</string>
    <string name="request_succeed">请求成功</string>
    <string name="request_failed">请求失败</string>
    <string name="request_json_result">请求方法：%1$s\n请求地址：%2$s\n响应数据：%3$s\n业务状态码：%4$s。</string>
    <string name="request_succeed_head">请求成功, 请求方式为HEAD, 没有响应内容。</string>
    <string name="request_method_head">请求方法为HEAD，没有响应内容。</string>
    <string name="request_method_patch">服务器不支持的请求方法。</string>
    <string name="request_method_not_allow">服务器仅仅支持请求方法：%1$s</string>
    <string name="request_json_object">JsonObject对象</string>
    <string name="request_json_array">JsonArray对象</string>
    <string name="request_json_body_input_tip">请求输入提交的json。</string>
    <string name="request_define_fast_json">自定义FastJson请求</string>
    <string name="request_define_java_bean">自定义JavaBean请求</string>
    <string name="request_from_cache">结果来自缓存</string>
    <string name="request_from_network">结果来自网络</string>
    <string name="request_cache_request_failed_read_cache_tip">具体的可以看看代码，仅仅一句话设置缓存模式就可以了，测试的朋友，可以先成功请求一次，然后断网再请求，就会返回缓存啦！</string>
    <string name="request_cache_only_read_cache_failed">缓存模式是Only_Read_Cache，但是没有找到缓存。</string>
    <string name="request_redirect_location">被重定向到URL：%1$s。</string>
    <string name="upload_start">开始上传</string>
    <string name="upload_succeed">上传完毕</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_cancel">上传被取消</string>
    <string name="upload_error">上传发生错误</string>
    <string name="upload_file_status">文件状态：</string>
    <string name="upload_file_status_wait">等待操作…</string>
    <string name="upload_file_select_album">选择图片</string>
    <string name="upload_file_select_album_null">请选择图片</string>
    <string name="upload_file_select_album_null_again">文件不存在，请重新选择图片</string>
    <string name="download_mobile_data_tip">多任务下载四个文件，最好用WIFI测试喔。</string>
    <string name="download_start">开始下载</string>
    <string name="download_delete">删除文件</string>
    <string name="delete_succeed">删除成功</string>
    <string name="download_progress">已下载：%1$d&#037;&#037;，速度：%2$skb&#047;s</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_un">未知错误。</string>
    <string name="no_operation_des">请看本Activity的代码和注释</string>
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>
    <string name="app_name_about">贵州省重点运营车联网联控平台</string>
    <string name="no_network">网络无连接，请检查网络</string>
    <string name="socket_time_out">连接超时，请稍后重试</string>
    <string name="exit_routine">再按一次退出程序</string>
    <string name="tab_home">首页</string>
    <string name="tab_service">服务</string>
    <string name="tab_my">我的</string>
    <string name="car_title">车辆</string>
    <string name="car_location">车辆定位</string>
    <string name="please_loginname">登录名</string>
    <string name="please_loginnameet">请输入登录名</string>
    <string name="please_loginnpwd">用户名</string>
    <string name="please_loginnpwdet">请输入密码</string>
    <string name="car_01">接入平台:</string>
    <string name="car_02">所属企业:</string>
    <string name="car_03">入网时间:</string>
    <string name="car_04">定位时间:</string>
    <string name="search_car">请输入车牌号</string>
    <string name="search">搜索</string>
    <string name="search_car_nodate">无查询结果</string>
    <string name="search_nodate">无查询纪录</string>
    <string name="search_nodate_record">无查岗纪录</string>
    <string name="search_nodate_aiya">哎呀~暂无数据</string>
    <string name="nothing_position">暂无车辆位置信息</string>
    <string name="my_service_1">车辆定位</string>
    <string name="my_service_2">轨迹回放</string>
    <string name="my_service_3">车辆详情</string>
    <string name="my_service_4">实时视频</string>
    <string name="my_service_5">区域分析</string>
    <string name="my_service_6">行业分析</string>
    <string name="my_service_7">报警分析</string>
    <string name="my_service_8">业户分析</string>
    <string name="my_service_9">平台分析</string>
    <string name="my_service_10">调度纪录</string>
    <string name="my_service_11">查岗</string>
    <string name="my_center_info">账号信息</string>
    <string name="my_center_pwd">修改密码</string>
    <string name="my_center_about">关于我们</string>
    <string name="my_center_out">退出当前账号</string>
    <string name="my_center_outsure">确认退出登录</string>
    <string name="my_out">退出登录</string>
    <string name="takePhoto">拍照</string>
    <string name="selectPicFromAlbum">从手机相册中选择</string>
    <string name="confirm">确认</string>
    <string name="my_infotitle">账户信息</string>
    <string name="my_phone">电话号码</string>
    <string name="my_user_name">用户名</string>
    <string name="my_arecode_name">所属区域</string>
    <string name="my_creation_date">创建时间</string>
    <string name="my_deadline">过期时间</string>
    <string name="updatepwd_title">修改密码</string>
    <string name="tv_old_pwd">旧密码</string>
    <string name="tv_new_pwd">新密码</string>
    <string name="tv_new_pwdag">确认新密码</string>
    <string name="et_old_pwd">请输入旧密码</string>
    <string name="et_new_pwd">请输入密码</string>
    <string name="et_new_pwdag">请输入新密码</string>
    <string name="et_new_pwdag_fault">新密码与确认密码不一致</string>
    <string name="et_new_pwdagg">请确认新密码</string>
    <string name="confir_change">确认修改</string>
    <string name="success_change">密码修改成功</string>
    <string name="about_context">\t\t广州亿程交通信息有限公司(新宁物流[300013]旗下品牌)，全球领先的位置服务运营商，自2003年成立以来，一直专注于车联网事业，是一家拥有平台、 终端设备整套解决方案和自主知识产权的高新技术企业。\n \t\t “e云车队”是广州亿程重点打造的位置云服务平台的重要组成部分，通过GPS/北斗/2G/3G/4G、GIS、 车载WI-FI、移动互联、车联大数据、云计算等先进技术，为各行业用户提供车辆安全出行、用车成本、 用车效率、运营能力、车辆调度、实时视频等核心服务，打造更加安全、方便、快捷、高效的车辆运营服务体系。</string>
    <string name="tv_copyright">Copyright © 2010 - 2017</string>
    <string name="tv_copyright_name">广州亿程交通信息有限公司版权所有</string>
    <string name="detail_title">车辆详情</string>
    <string name="detail_in">接入平台</string>
    <string name="detail_in_time">入网时间</string>
    <string name="detail_owner">所属业户</string>
    <string name="detail_trade">所属行业</string>
    <string name="detail_region">所属区域</string>
    <string name="detail_type">车辆类型</string>
    <string name="detail_color">车辆颜色</string>
    <string name="detail_num">车牌号</string>
    <string name="First_opentime">第一次上传数据时间</string>
    <string name="Last_opentime">最后一次上传数据时间</string>
    <string name="trajectory_nothing">暂无轨迹数据</string>
    <string name="owner_title">业户分析</string>
    <string name="search_owner">请输入业户名称</string>
    <string name="tv_owner_num">业户数量</string>
    <string name="tv_in_num">入网车辆</string>
    <string name="tv_average">平均(辆/业户)</string>
    <string name="tv_all_num">车辆数量</string>
    <string name="tv_in_per">入网率</string>
    <string name="tv_d_all_num">车辆总数</string>
    <string name="tv_d_in_num">入网车辆总数</string>
    <string name="tv_d_in_per">入网率</string>
    <string name="tv_d_line_num">上线车辆总数</string>
    <string name="tv_d_line_per">上线率</string>
    <string name="tv_d_alarm_num">报警车辆总数</string>
    <string name="tv_d_alarm_per">车辆报警率</string>
    <string name="search_post_work">查岗行业</string>
    <string name="search_post_trouble">查岗问题</string>
    <string name="answer">答案</string>
    <string name="issued">下发</string>
    <string name="cancel">取消</string>
</resources>