<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/head_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e" />

        <RelativeLayout style="@style/rl_center_vertical">



            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_old_pwd"
                android:textColor="@color/gray_3" />

            <EditText
                android:id="@+id/et_oldpwd"
                style="@style/edit_text_public"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:hint="@string/et_old_pwd"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="12"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e" />

        <RelativeLayout style="@style/rl_center_vertical">



            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_new_pwd"
                android:textColor="@color/gray_3" />

            <EditText
                android:id="@+id/et_new_pwd"
                style="@style/edit_text_public"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:hint="@string/et_new_pwdag"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="12"
                android:maxLines="1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e" />

        <RelativeLayout style="@style/rl_center_vertical">



            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_new_pwdag"
                android:textColor="@color/gray_3" />

            <EditText
                android:id="@+id/et_new_pwdag"
                style="@style/edit_text_public"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="150dp"
                android:hint="@string/et_new_pwdagg"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLength="12"
                android:maxLines="1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_e" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_update"
        style="@style/btn_public_blue"
        android:layout_marginTop="90dp"
        android:text="@string/confir_change"/>
</LinearLayout>
