<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f4"
    android:orientation="vertical">


    <include layout="@layout/head_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_f4"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />

        <RelativeLayout style="@style/rl_detail_white">

            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_in"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_in"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />


        <RelativeLayout style="@style/rl_detail_white">


            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_in_time"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_in_time"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="9dp"
            android:background="@color/gray_ce" />

        <RelativeLayout style="@style/rl_detail_white">

            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_num"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_num"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />



        <RelativeLayout style="@style/rl_detail_white">

            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_color"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_color"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />

        <RelativeLayout style="@style/rl_detail_white">

            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_type"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_type"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="9dp"
            android:background="@color/gray_ce" />

        <RelativeLayout style="@style/rl_detail_white">

            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_owner"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_owner"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />


        <RelativeLayout style="@style/rl_detail_white">


            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_trade"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_trade"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />


        <RelativeLayout style="@style/rl_detail_white">


            <TextView
                style="@style/account_centerVertical"
                android:layout_marginLeft="20dp"
                android:text="@string/detail_region"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tv_detail_region"
                style="@style/account_centerVertical"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray_9" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_ce" />
    </LinearLayout>
</LinearLayout>
