<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_f5"
    android:layout_height="match_parent">


    <include layout="@layout/head_layout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_e" />

    <RelativeLayout
        android:id="@+id/rl_search_posto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rl_into">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/search_post_work"
            android:textColor="@color/gray_3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/gray_9" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/right" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_e" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_search_trouble"
            android:layout_width="match_parent"
            android:background="@drawable/rl_into"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/search_post_trouble"
                android:textColor="@color/gray_3" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_post_trouble"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textColor="@color/gray_9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:background="@color/gray_e" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inspect_ico_answers"
                    />

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/gray_3"
                    android:layout_width="wrap_content"
                    android:text="@string/answer"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_zhuangtai"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:textColor="@color/search_post"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_e" />


    <Button
        android:id="@+id/bt_issued"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/issued"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bt_login"
        android:layout_height="wrap_content" />

</LinearLayout>
